z-index fix

--- a/src/App.css
+++ b/src/App.css
@@ -88,11 +88,11 @@ body {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
-  z-index: 101;
+  z-index: 2000;
 }
 
 .menu {
-
+  z-index: 2000;
   /*padding-top: 9px;*/
   display: inline-block;
   cursor: pointer;
@@ -278,22 +278,32 @@ body {
   }
 }
 
-.p {
-  animation: titleAni 10s linear infinite alternate;
-  /*animation-play-state: paused;*/
-}
+/*.p {
+  */
 
-.p1 {
-  animation-delay: -1s
-}
+/*  animation: titleAni 10s linear infinite alternate;*/
 
-.p2 {
-  animation-delay: -2s
-}
+/*animation-play-state: paused;*/
 
-.p3 {
-  animation-delay: -3s;
-}
+/*}*/
+
+/*.p1 {*/
+
+/*  animation-delay: -1s*/
+
+/*}*/
+
+/*.p2 {*/
+
+/*  animation-delay: -2s*/
+
+/*}*/
+
+/*.p3 {*/
+
+/*  animation-delay: -3s;*/
+
+/*}*/
 
 .content {
   padding-left: 0px !important;
